[gd_scene load_steps=8 format=3 uid="uid://bo7eesj5hn1sq"]

[ext_resource type="Script" uid="uid://dhpew8klfs2r5" path="res://scenes/main_scene/main_scene.gd" id="1_6iw8k"]
[ext_resource type="Script" uid="uid://cxmmupnm7gjgg" path="res://scenes/maps/debug_ui_main_door.gd" id="2_o5t4i"]
[ext_resource type="Texture2D" uid="uid://bf8x5i1kvsust" path="res://assets/tilesets/tilesStuff.png" id="3_34m6u"]
[ext_resource type="Script" uid="uid://d2oe7ej00twfi" path="res://scenes/main_scene/debug_ui_start_map_start_room.gd" id="4_34m6u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cqfw"]
bg_color = Color(0, 0.186667, 0.4, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="AtlasTexture" id="AtlasTexture_kbdpr"]
atlas = ExtResource("3_34m6u")
region = Rect2(516.828, 97.5079, 9.26929, 13.0663)

[sub_resource type="AtlasTexture" id="AtlasTexture_6loks"]
atlas = ExtResource("3_34m6u")
region = Rect2(484.884, 98.1114, 9.22958, 11.9985)

[node name="main_scene" type="Node2D"]
script = ExtResource("1_6iw8k")

[node name="player_container" type="Node2D" parent="."]

[node name="current_map" type="Node2D" parent="."]

[node name="UIManager" type="CanvasLayer" parent="."]

[node name="DebugUI-main-door-start-map" type="Control" parent="UIManager"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_o5t4i")

[node name="Panel" type="Panel" parent="UIManager/DebugUI-main-door-start-map"]
layout_mode = 0
offset_left = 84.0
offset_top = 67.0
offset_right = 1067.0
offset_bottom = 589.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2cqfw")

[node name="Label" type="Label" parent="UIManager/DebugUI-main-door-start-map/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 96.0
offset_right = 951.0
offset_bottom = 415.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0666667, 0, 0.709804, 0.619608)
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 22
text = "What will be the output of fibonacci(5)?

def fibonacci(n):
    if  n  <=  1:
        return  n
    else:
        return fibonacci(n  -  1)  +  fibonacci(n  -  2)

print(fibonacci(5))  # What is the result of fibonacci(5)?
"
autowrap_mode = 1

[node name="TextEdit" type="TextEdit" parent="UIManager/DebugUI-main-door-start-map/Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 440.0
offset_right = 722.0
offset_bottom = 495.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
wrap_mode = 1

[node name="SubmitButton" type="Button" parent="UIManager/DebugUI-main-door-start-map/Panel"]
layout_mode = 0
offset_left = 736.0
offset_top = 440.0
offset_right = 839.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 16
text = "Submit"
icon = SubResource("AtlasTexture_kbdpr")

[node name="ClosedButton" type="Button" parent="UIManager/DebugUI-main-door-start-map/Panel"]
layout_mode = 0
offset_left = 852.0
offset_top = 440.0
offset_right = 954.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 16
text = "Close"
icon = SubResource("AtlasTexture_6loks")

[node name="ErrorLabel" type="Label" parent="UIManager/DebugUI-main-door-start-map/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 3.0
offset_right = 948.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorTimer" type="Timer" parent="UIManager/DebugUI-main-door-start-map/Panel"]

[node name="DebugUI-start-map-start-room" type="Control" parent="UIManager"]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_34m6u")

[node name="Panel" type="Panel" parent="UIManager/DebugUI-start-map-start-room"]
layout_mode = 0
offset_left = 84.0
offset_top = 67.0
offset_right = 1067.0
offset_bottom = 589.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2cqfw")

[node name="Label" type="Label" parent="UIManager/DebugUI-start-map-start-room/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 94.0
offset_right = 946.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0666667, 0, 0.709804, 0.619608)
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 22
text = "how to print hello world in python 
expected output: Hello World
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="TextEdit" type="TextEdit" parent="UIManager/DebugUI-start-map-start-room/Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 440.0
offset_right = 722.0
offset_bottom = 495.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
wrap_mode = 1

[node name="SubmitButton" type="Button" parent="UIManager/DebugUI-start-map-start-room/Panel"]
layout_mode = 0
offset_left = 736.0
offset_top = 440.0
offset_right = 839.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 16
text = "Submit"
icon = SubResource("AtlasTexture_kbdpr")

[node name="ClosedButton" type="Button" parent="UIManager/DebugUI-start-map-start-room/Panel"]
layout_mode = 0
offset_left = 852.0
offset_top = 440.0
offset_right = 954.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 16
text = "Close"
icon = SubResource("AtlasTexture_6loks")

[node name="ErrorLabel" type="Label" parent="UIManager/DebugUI-start-map-start-room/Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 2.0
offset_right = 945.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorTimer" type="Timer" parent="UIManager/DebugUI-start-map-start-room/Panel"]
